--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 
 name = "pyri-example-plugin"
-version = "0.2.0"
+version = "0.3.0"
 description = "PyRI Teach Pendant Example Plugin"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -45,3 +45,6 @@ requires = [
     'setuptools',
     'toml',
 ]
+
+[tool.setuptools.package-data]
+'pyri_example_plugin.webui_static' = ['*.html']
